Expose restricted blocklist ranking
